<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_shop"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_order_history" />
    </group>

    <group android:id="@+id/account_group">
        <item
            android:onClick="onAccount"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_account"/>

        <item
            android:onClick="onLogout"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_exit"/>
    </group>
</menu>